<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_data">Data</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_worker">Worker</string>
    <string name="menu_accelerometer">Accelerometer</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_recorder">Recorder</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_file_handling">File Handling</string>
    <string name="add_file_description">Add file</string>
    <string name="menu_internet">Internet</string>
    <string name="menu_map">Map</string>
</resources>