<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_worker"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_worker" />
        <item
            android:id="@+id/nav_accelerometer"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_accelerometer" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_recorder"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_recorder" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_file_handling"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_file_handling" />
        <item
            android:id="@+id/nav_internet"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_internet" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_map" />
    </group>
</menu>