<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.fedulovama.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.fedulovama.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.fedulovama.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.fedulovama.mireaproject.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.fedulovama.mireaproject.WebViewFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/nav_worker"
        android:name="ru.mirea.fedulovama.mireaproject.WorkerFragment"
        android:label="@string/menu_worker"
        tools:layout="@layout/fragment_worker" />
    <fragment
        android:id="@+id/nav_accelerometer"
        android:name="ru.mirea.fedulovama.mireaproject.AccelerometerFragment"
        android:label="@string/menu_accelerometer"
        tools:layout="@layout/fragment_accelerometer" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.fedulovama.mireaproject.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_recorder"
        android:name="ru.mirea.fedulovama.mireaproject.RecorderFragment"
        android:label="@string/menu_recorder"
        tools:layout="@layout/fragment_recorder" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.fedulovama.mireaproject.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_file_handling"
        android:name="ru.mirea.fedulovama.mireaproject.FileHandlingFragment"
        android:label="@string/menu_file_handling"
        tools:layout="@layout/fragment_file_handling" />
    <fragment
        android:id="@+id/nav_internet"
        android:name="ru.mirea.fedulovama.mireaproject.InternetFragment"
        android:label="@string/menu_internet"
        tools:layout="@layout/fragment_file_handling" />
    <fragment
        android:id="@+id/nav_map"
        android:name="ru.mirea.fedulovama.mireaproject.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_file_handling" />
</navigation>